<resources>
    <string name="app_name">RecipeApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite">Favorite</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="splash_title">Discover Delicious Recipes</string>
    <string name="splash_subtitle">Cook smart, eat healthy.</string>
    <string name="login_greeting">Hi,\nPlease Login </string>
    <string name="email">Email</string>
    <string name="email_holder">Enter your email</string>
    <string name="password">Password</string>
    <string name="password_holder">Enter your password</string>
    <string name="Dont_have_account">don\'t have sn account ? Sign Up</string>
    <string name="login">Login</string>
    <string name="sign_up_greeting">Create\n Account </string>
    <string name="sign_up_username">UserName</string>
    <string name="username_sign_up_holder">Enter your username</string>
    <string name="have_an_account">Already have an account? Login</string>"
    <string name="sign_up">Sign Up</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="about_the_creator">About the Creator</string>
    <string name="about_the_application">About the Application</string>
    <string name="app_details">The Recipe App allows users to browse various recipes, save their favorites, and perhaps even create their own. Enjoy exploring a world of culinary delights!</string>
    <string name="sign_out">Sign Out</string>
    <string name="meal_name">Meal name</string>
    <string name="category">Category</string>
    <string name="delete">delete</string>
    <string name="favorites">Favorites</string>
    <string name="meal_image">Meal image</string>
    <string name="video_thumbnail">Recipe video thumbnail</string>
    <string name="play_video">Play recipe video</string>

</resources>